
* Added -l option to harpmerge.

* Renamed area/point operations:
  - area_mask_covers_area -> area_covers_area
  - area_mask_covers_point -> point_in_area
  - area_mask_intersects_area -> area_intersects_area
  - point_in_area -> area_covers_point
  The first part of the operation name now reflects the item in the
  product and the second part reflects the parameter that is provided.

* Added sort() and area_inside_area() operations.

* The derive() operation can now be used without dimension specification
  to perform a unit and/or data type conversion on an existing variable.

* The derive_smoothed_column(), regrid() and smooth() operations can now
  use a single merged collocated product (instead of a combination of a csv
  collocation result file and a dataset directory of collocated products).

* An area parameter for operations can now either be a reference to an
  area mask file or a single polygon provided as lat/lon array parameters.

* Added derivation to derive the area (size) of latitude/longitude bounds.

* Derivations of bound variables will now clamp to the edge midpoints when
  the `regrid_out_of_bounds` option is set to `edge`.

* The 'data_type' parameter for harp_product_get_derived_variable() and
  harp_product_add_derived_variable() is now a pointer to allow it to be
  optional (i.e. pass NULL to use the default data type).

* Added harp_geometry_get_area(),
  harp_product_get_smoothed_column_using_collocated_product(),
  harp_product_smooth_vertical_with_collocated_product(),
  harp_product_sort(), harp_product_regrid_with_collocated_product(),
  harp_set_udunits2_xml_path(), harp_set_udunits2_xml_path_conditional(),
  and harp_variable_set_enumeration_values() functions.

* Changed 'percentage' parameter of harp_geometry_has_area_overlap() to
  'fraction'.

* harp_product_set_source_product() now has a product path as parameter
  and stores the base name of this as source_product value.

* Added HARP_UNIT_AREA default unit.
